--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 style="text-align: center; margin-top: 50px; margin-bottom: 0px;">Rijal Gabriel</h1>
         <h2 style="text-align: center;">a student with high dreams</h2>
       </header>
-        <main id="intoduction">
+        <main id="introduction">
           <video class="center" style="width: 80%; margin-top: 50px;" src="videos/Izinkan Aku Bercerita (PROYEK SBK).mp4" type="video/mp4" controls>
             Video Not Avalaible
           </video>
