--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/style2.css">
     </head>
 
-    <body class="example">
+    <body>
       <header>
         <nav>
           <ul>
