Update Content + Organize CSS

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption&family=Sriracha&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="width-100">
         <nav>
-            <div id="nav">
+            <div class="nav">
                 <a href="#h1">HOME</a>
                 <a href="mailto:gabrielhutasoit24@gmail.com">CONTACT ME</a>
                 <a href="./html/post.html">MY POST</a>
@@ -33,7 +33,7 @@
         <section class="container" id="main-content">
             <h2>Hi! Do you want to know me more?</h2>
             <h3>Here some quick QnA for you!</h3>
-            <ul id="qna">
+            <ul class="content-font" id="qna">
                 <li><b>1. What is your name?</b></li>
                 <p>My name's Rijal Gabriel (abrreviated as Iel).</p>
                 <li><b>2. What is your nationality?</b></li>
@@ -41,7 +41,7 @@
                 <li><b>3. How old are you?</b></li>
                 <p>I'm 16 years old (currently).</p>
                 <li><b>4. What is your hobby?</b></li>
-                <p>I like playing games, watching animes, and coding.</p>
+                <p>I like playing games, watching any videos, and coding.</p>
                 <li><b>5. Where do you study?</b></li>
                 <p>Uhhh.., in my school I guess?</p>
                 <li><b>6. When did you start to study programming etc.?</b></li>
@@ -51,7 +51,7 @@
             </ul>
         </section>
         <section class="container" id="project-content">
-            <h2>Here is some projects that I've worked on.</h2>
+            <h2>Here is some projects that I've taken part on.</h2>
             <h3>(Some of the projects are still undergo, tho).</h3>
             <section class="img-container">
                 <div><a href="https://www.youtube.com/watch?v=bToRdiorkMs&t" target="_blank"><img src="./resource/image/project1.png" alt="A logo being grabbed by a zombie hand in the middle of dark forest" title="Nine-Tastic Feast"></a></div>
@@ -64,11 +64,11 @@
         <p id="notes">This is my first personal website. So, feel free to tell me what needs some tweaking :)</p>
         <p id="quotes">Some quotes from me:</p>
         <h2>
-            <p>''I need to pin the corners of my map,</p>
-            <p>before I can travel any further.''</p>
+            <p style="margin-bottom: 0;">''I need to pin the corners of my map,</p>
+            <p style="margin-top: 0;">before I can travel any further.''</p>
         </h2>
-        <p style="font-style: italic; font-size: 1.1vw;"> -- by: <a href="http://www.quotationspage.com/quote/39722.html" target="_blank">Mitch Hedberg,</a> --</p>
-        <p style="font-style: italic; font-size: 1.1vw;">-- but I shorten it. --</p>
+        <p style="margin-bottom: 1vh;"> -- by: <a href="http://www.quotationspage.com/quote/39722.html" target="_blank">Mitch Hedberg,</a> --</p>
+        <p style="margin-top: 0;">-- but I shorten it. --</p>
     </footer>
 </body>
 </html>
